impl openlayer directive

--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -35,8 +35,8 @@
                             </aside>
                              <!-- Map -->
                             <section class="main-section" style="padding-top: 10px;height: 485px;">
-                                <div class="small-12 columns" style="padding: 0px;background-color: #009900">
-                                    <img src="img/map.png" alt="Map" style="height: 485px">
+                                <div class="small-12 columns" style="height: 485px;padding: 0px">
+                                    <ol-map alt="Map" style="height: 485px"></ol-map>
                                     <div class="overlayMapInfo" ng-show="varOverlayMapInfo">
                                         <p>Content for overlayMapInfo </p>
                                     </div>
