impl socketConnection and filter menu, further steps: show the polygons

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -53,7 +53,7 @@
 /*off-canvas-menu*/
 
 .left-off-canvas-menu,.right-off-canvas-menu{
-    background: #FFFFFF;
+    background: #008CBA;
 }
 .left-off-canvas-menu > .off-canvas-menu-title{
     background-color: #43ac6a;
@@ -123,7 +123,7 @@
     position: absolute;
     right: 0;
     top: 300px;
-    z-index: 2;
+    z-index: 1000;
 }
 /*content*/
 
