--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -24,15 +24,9 @@
                                  </section>
                              </nav>
                              <!-- Filter -->
-                            <aside class="left-off-canvas-menu">
-                                <div class="off-canvas-menu-title off-canvas-list">
-                                   <a href="#"></a>
-                                    <p><i class="fi-heart large" style="font-size: 24px"></i><span>Filter</span></p>
-                                </div>
-                                <div class="off-canvas-menu-content">
-                                    <p>content</p>
-                                </div>
-                            </aside>
+                             <aside class="left-off-canvas-menu">
+                                 <filter></filter>
+                             </aside>
                              <!-- Map -->
                             <section class="main-section" style="padding-top: 10px;height: 485px;">
                                 <div class="small-12 columns" style="height: 485px;padding: 0px">
