set angularjs architecture for informationpanel, distinguish between horizontal and vertical panel

--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -32,7 +32,7 @@
                                 <div class="small-12 columns" style="height: 485px;padding: 0px">
                                     <ol-map alt="Map" style="height: 485px"></ol-map>
                                     <div class="overlayMapInfo" ng-show="varOverlayMapInfo">
-                                        <p>Content for overlayMapInfo </p>
+                                        <map-Object-Information  align="Horizontal"></map-Object-Information>
                                     </div>
                                 </div>
                             </section>
@@ -61,7 +61,7 @@
                                             <p><i class="fi-heart large" style="font-size: 24px"></i><span>Filter</span></p>
                                         </div>
                                         <div class="off-canvas-menu-content">
-                                            <p>content</p>
+                                            <p><label>content</label></p>
                                         </div>
                                     </aside>
                                     <section class="main-section" style="padding-top: 10px;max-height: 494px;overflow-y: scroll;">
@@ -107,7 +107,7 @@
                         </div>
                         <!-- Map Info -->
                         <div ng-switch-when="false"class="panel callout" style="margin-top: 55px;height: 486px;overflow-y: scroll;">
-                            <p>Content</p>
+                            <map-Object-Information align="Vertical"></map-Object-Information>
                         </div>
                     </div>
             </div>
