--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -5,10 +5,10 @@
     </div>
     <div class="row full-width">
         <!-- Content(Map & Diagrams) -->
-        <div class="medium-11 columns" ng-class="contentCSS" style=" padding-left: 0px; padding-right: 0px;">
-            <div class="row full-width" style="margin-left: 0px; margin-right: 0px;">
+        <div class="medium-11 columns map-diagramm-content" ng-class="contentCSS">
+            <div class="row full-width">
                 <!-- Left Sidebar & Map-->
-                <div ng-class="mapCSS" class="medium-7 columns" style="margin-bottom: 10px;padding-right: 0;">
+                <div ng-class="mapCSS" class="medium-7 columns map-content">
                      <!-- Left Sidebar -->
                      <div class="off-canvas-wrap">
                          <div class="inner-wrap">
@@ -16,10 +16,10 @@
                                  <section class="left-small">
                                      <a class="left-off-canvas-toggle menu-icon"><span></span></a>
                                  </section>
-                                 <section ng-switch on="showBigMap" class="middle tab-bar-section tab-bar-section-map" style="padding-right: 0px;">
+                                 <section ng-switch on="showBigMap" class="middle tab-bar-section tab-bar-section-map">
                                      <h1 class="title left">Map</h1>
-                                     <a  ng-switch-when="true" class="right" ng-click="showHideMap()" style="padding-top: 5px"><i class="fi-arrows-in large" style="font-size: 24px;"></i></a>
-                                     <a  ng-switch-when="false" class="right" ng-click="showHideMap()" style="padding-top: 5px"><i class="fi-arrows-out large" style="font-size: 24px;"></i></a>
+                                     <a  ng-switch-when="true" class="right btn-showHideMap" ng-click="showHideMap()"><i class="fi-arrows-in large"></i></a>
+                                     <a  ng-switch-when="false" class="right btn-showHideMap" ng-click="showHideMap()"><i class="fi-arrows-out large"></i></a>
                                  </section>
                              </nav>
                              <!-- Filter -->
@@ -27,9 +27,9 @@
                                  <filter></filter>
                              </aside>
                              <!-- Map -->
-                            <section class="main-section" style="padding-top: 10px;height: 485px;">
-                                <div class="small-12 columns" style="height: 485px;padding: 0px">
-                                    <ol-map alt="Map" style="height: 485px"></ol-map>
+                            <section class="main-section overlayMapInfo-section">
+                                <div class="small-12 columns">
+                                    <ol-map alt="Map ol-map"></ol-map>
                                     <div class="overlayMapInfo" ng-show="showOverlayMapInfo">
                                         <map-Object-Information  align="Horizontal"></map-Object-Information>
                                     </div>
@@ -63,7 +63,7 @@
                                             <p><label>content</label></p>
                                         </div>
                                     </aside>
-                                    <section class="main-section" style="padding-top: 10px;max-height: 494px;overflow-y: scroll;">
+                                    <section class="main-section diagrams-section">
                                         <div class="medium-12 columns">
                                             <div class="row">
                                                 <div class="columns" ng-class="singleDiagramCSS">
@@ -71,41 +71,15 @@
                                                         <img src="img/diagram.png" alt="diagram">
                                                     </div>
                                                 </div>
-                                                <div class=" columns" ng-class="singleDiagramCSS">
-                                                    <div class="panel callout">
-                                                        <img src="img/diagram.png" alt="diagram">
-                                                    </div>
-                                                </div>
-                                                <div class="columns"  ng-class="singleDiagramCSS">
-                                                    <div class="panel callout">
-                                                        <img src="img/diagram.png" alt="diagram">
-                                                    </div>
-                                                </div>
-                                                <div class="columns"  ng-class="singleDiagramCSS">
-                                                    <div class="panel callout">
-                                                        <img src="img/diagram.png" alt="diagram">
-                                                    </div>
-                                                </div>
-                                                <div class="columns"  ng-class="singleDiagramCSS">
-                                                    <div class="panel callout">
-                                                        <img src="img/diagram.png" alt="diagram">
-                                                    </div>
-                                                </div>
-                                                <div class="columns"  ng-class="singleDiagramCSS">
-                                                    <div class="panel callout">
-                                                        <img src="img/diagram.png" alt="diagram">
-                                                    </div>
-                                                </div>
                                             </div>
-
                                         </div>
                                     </section>
                                     <a class="exit-off-canvas"></a>
                                 </div>
                             </div>
                         </div>
-                        <!-- Map Info -->
-                        <div ng-switch-when="false"class="panel callout" style="margin-top: 55px;height: 486px;overflow-y: scroll;">
+                        <!-- Map Obeject Info -->
+                        <div ng-switch-when="false"class="panel callout map-object-info">
                             <map-Object-Information align="Vertical"></map-Object-Information>
                         </div>
                     </div>
