--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -88,16 +88,10 @@
         <!-- Kpis-->
         <div class="medium-1 columns" ng-class="kipsCSS" style="padding: 5px;">
             <div class="row full-width" style="margin-top: 50px">
-                <div class="medium-12 columns" style="background-color: #ff8f00;height: 80px;margin-bottom: 5px">
-                    <a>
-                        <img src="img/KipsIcon/p&r.png"/>
-                        <p style="margin-left: 10px;;color: white;  margin-left: -1px;color: white;font-size: 0.8rem;">Park & Ride</p>
-                    </a>
-                </div>
                 <div class="medium-12 columns" style="background-color: #ffffff;height: 85px;margin-bottom: 5px">
                     <a>
                         <img src="img/KipsIcon/p&r_clicked.png"/>
-                        <p style="margin-left: 10px;color: white;  margin-left: -1px;color:#ff8f00 ;font-size: 0.8rem;">Park & Ride</p>
+                        <p style="margin-left: 10px;color: white;  margin-left: -1px;color:#1c8cba ;font-size: 0.8rem;">Park & Ride</p>
                     </a>
                 </div>
 
