impl fist approach of d3 diagram with example data

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,9 @@
 /*Gird*/
+svg{
+    display: auto;
+    width: auto;
+    height: auto;
+}
 .row.full-width {
     width: 100%;
     max-width: 100%;
