--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -68,7 +68,7 @@
                                     <div class="row">
                                         <div class="columns" ng-class="singleDiagramCSS">
                                             <div class="panel callout">
-                                                <img src="img/diagram.png" alt="diagram">
+                                                <status-panel></status-panel>
                                             </div>
                                         </div>
                                     </div>
