--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -6,4 +6,15 @@
             <dd>{{element.value}}</dd>
         </dl>
     </div>
+    <div>
+        <nvd3-line-chart
+                data="exampleData"
+                width="380"
+                height="240"
+                showXAxis="true"
+                showYAxis="true"
+                xAxisTickFormat="xAxisTickFormat_Date_Format()"
+                yAxisTickFormat="yAxisFormatFunction()">
+        </nvd3-line-chart>
+    </div>
 </div>
