impl bar chart with real data

--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -7,14 +7,13 @@
         </dl>
     </div>
     <div>
-        <nvd3-line-chart
+        <nvd3-discrete-bar-chart
                 data="exampleData"
                 width="380"
                 height="240"
                 showXAxis="true"
-                showYAxis="true"
-                xAxisTickFormat="xAxisTickFormat_Date_Format()"
-                yAxisTickFormat="yAxisFormatFunction()">
-        </nvd3-line-chart>
+                showYAxis="true">
+            <svg></svg>
+        </nvd3-discrete-bar-chart>
     </div>
 </div>
