--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -1,11 +1,17 @@
 <div>
     <p>{{headline}}</p>
-    <div class="elemententry" ng-repeat="element in elements">
-        <dl class="dl-horizontal" >
-            <dt>{{element.label}}</dt>
-            <dd>{{element.value}}</dd>
-        </dl>
-    </div>
+    <table>
+        <thead>
+        </thead>
+
+        <tbody>
+                <tr class="elemententry" ng-repeat="element in elements">
+                    <td>{{element.label}}</td>
+                    <td>{{element.value}}</td>
+                </tr>
+        </tbody>
+
+    </table>
     <div>
         <nvd3-discrete-bar-chart
                 data="exampleData"
