--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -18,6 +18,8 @@
                 width="380"
                 height="240"
                 showXAxis="true"
+                interactive="true"
+                tooltips="true"
                 showYAxis="true">
             <svg></svg>
         </nvd3-discrete-bar-chart>
