icon for Bike Sharing

--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -94,6 +94,12 @@
                     <p style="margin-left: 10px;color: white;  margin-left: -1px;color:#1c8cba ;font-size: 0.8rem;">Park & Ride</p>
                 </a>
             </div>
+            <div class="medium-12 columns" style="background-color: #ffffff;height: 85px;margin-bottom: 5px">
+                <a>
+                    <img src="img/KipsIcon/BikeSharing.png"/>
+                    <p style="margin-left: 10px;color: white;  margin-left: -1px;color:#1c8cba ;font-size: 0.8rem;">Bike Sharing</p>
+                </a>
+            </div>
 
         </div>
     </div>
